# nous-state

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  RESULTS_AUDIT.md  pyproject.toml
benchmark/: ABLATIONS.md  README.md  contradiction_bench.py  eval_locomo.py  eval_locomo_fast.py  eval_longmemeval.py  extraction_tax_bench.py  mincap_utility_bench.py  poison_bench.py  poison_launder_bench.py  poison_pipeline_bench.py  provenance_agent_bench.py  provenance_unpinned_bench.py  reliability_bench.py  rescore_offline.py  run_ablations.sh
nous/: __init__.py  compressor.py  config.py  coupling.py  delta.py  delta_log.py  dimension.py  engine.py  extractor.py  llm_extractor.py  persistence.py  query_rewriter.py  retrieval.py  surprise.py  updater.py  world_model.py
paper/: nous.bib  nous.tex
tests/: test_all_scenarios.py  test_extractor.py  test_v2_llm.py
