[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nous-state"
version = "0.2.0"
description = "Probabilistic agent state layer. Bayesian belief tracking, surprise-driven updates, and delta logs for AI agents. Paper: arXiv:2606.22030"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["agent", "memory", "bayesian", "llm", "state", "ai", "predictive-coding", "information-theory", "agent-memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Zero runtime dependencies — pure Python stdlib only
dependencies = []

[project.optional-dependencies]
# OpenRouter / any OpenAI-compatible API for LLM extraction
llm = []  # stdlib urllib is used; no external package needed
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://arxiv.org/abs/2606.22030"
Repository = "https://github.com/Pranavsingh431/nous-state"
"Bug Tracker" = "https://github.com/Pranavsingh431/nous-state/issues"
Paper = "https://arxiv.org/abs/2606.22030"

[tool.setuptools.packages.find]
where = ["."]
include = ["nous*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
